# halide-playground

./: .gitignore  CMakeLists.txt  README.md
2d_blur/: CMakeLists.txt  blur.html  process.cpp
2dblur_sched/: CMakeLists.txt  process.cpp
camera_pipe/: CMakeLists.txt
gaussian/: CMakeLists.txt  gaussian_pipe_generator.cpp  process.cpp
harris/: CMakeLists.txt  harris_pipe_generator.cpp  process.cpp
lens_blur/: CMakeLists.txt
linear_algebra/: CMakeLists.txt  blas_l1_generators.cpp
linear_algebra/tests/: CMakeLists.txt  halide_blas.cpp  test_halide_blas.cpp
stereo/: CMakeLists.txt  process.cpp  stereo_pipe_generator.cpp
wavelet/: CMakeLists.txt
